template/resources/sass/style.scss
/* ... */
.treePanel {
  position: absolute;
  top: 215px;
  bottom: 20px;
  overflow: auto;
  width: 230px; }

.piechartLinks {
  a {
    text-decoration: none;
    padding-left: 15px; }
  .a0 {
    background: url(../images/piecharts.png) no-repeat 0 -78px; }
  .a1 {
    background: url(../images/piecharts.png) no-repeat 0 -61px; }
  .a2 {
    background: url(../images/piecharts.png) no-repeat 0 -45px; }
  .a3 {
    background: url(../images/piecharts.png) no-repeat 0 -29px; }
  .a4 {
    background: url(../images/piecharts.png) no-repeat 0 -13px; }
  .a5 {
    background: url(../images/piecharts.png) no-repeat 0 3px; }
  .ra0 {
    background: url(../images/piecharts_red.png) no-repeat 0 -78px;
    min-width: 15px;
    min-height: 15px; }
  .ra1 {
    background: url(../images/piecharts_red.png) no-repeat 0 -61px;
    min-width: 15px;
    min-height: 15px; }
  .ra2 {
    background: url(../images/piecharts_red.png) no-repeat 0 -45px;
    min-width: 15px;
    min-height: 15px; }
  .ra3 {
    background: url(../images/piecharts_red.png) no-repeat 0 -29px;
    min-width: 15px;
    min-height: 15px; }
  .ra4 {
    background: url(../images/piecharts_red.png) no-repeat 0 -13px;
    min-width: 15px;
    min-height: 15px; }
  .ra5 {
    background: url(../images/piecharts_red.png) no-repeat 0 3px;
    min-width: 15px;
    min-height: 15px; } }

@include icons;

.cfgStats {
  margin-top: 10px;
  th {
    padding: 10px;
    font-weight: bold; }
  td {
    padding: 10px;
    vertical-align: top; }
  .o {
    td {
      background-color: #eeeeee; } } }

.searchResults {
  th {
    text-align: left;
    font-weight: bold; }
  td {
    height: 20px;
    border-top: 1px solid #cccccc;
    padding: 3px 6px 3px 3px; }
  .icn {
    width: 20px;
    height: 20px; }
  .result {
    font-weight: bold; } }

.historyBut {
  button {
    border: 0;
    padding-right: 10px;
    background: url("../../extjs/resources/themes/images/default/button/arrow.gif") no-repeat top right; } }

.notice {
  background-color: #fff99c;
  text-align: center;
  color: #434343;
  font-weight: bold;
  padding: 8px 0; }

.wrapper {
  position: relative; }

